feat: add math formula with katex

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "eslint-config-next": "14.2.7",
     "github-slugger": "^2.0.0",
+    "katex": "^0.16.11",
     "next": "^14.2.7",
     "next-contentlayer2": "^0.5.0",
     "next-sitemap": "^4.2.3",
@@ -27,9 +28,11 @@
     "react-hook-form": "^7.53.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.13.2",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "shiki": "^1.14.1",
     "tailwindcss": "3.4.10"
   },
